# ZLCoro

./: .clang-format  .editorconfig  .gitignore  BUG_FIX.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  PROGRESS.md  PROJECT_STRUCTURE.md  README.md  ROADMAP.md
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt
cmake/: ZLCoroConfig.cmake.in
docs/: API.md  ARCHITECTURE.md  BENCHMARKS.md
examples/: 01_basic_task.cpp  02_generator_example.cpp  03_scheduler_example.cpp  04_async_io_example.cpp  CMakeLists.txt  simple_io_test.cpp
include/zlcoro/: io.hpp
include/zlcoro/core/: generator.hpp  task.hpp
include/zlcoro/io/: async_file.hpp  async_socket.hpp  epoll_poller.hpp  event_loop.hpp
include/zlcoro/scheduler/: async.hpp  scheduler.hpp  thread_pool.hpp
tests/: CMakeLists.txt
tests/core/: generator_test.cpp  task_test.cpp
tests/io/: io_test.cpp
tests/scheduler/: scheduler_test.cpp
